openshift/cats/dev/frontend/cats_frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"cats-frontend:dev","namespace":"e38158-tools"},"fieldPath":"spec.template.spec.containers[?(@.name==\"cats-frontend\")].image","paused":false}]'
  name: cats-frontend
  namespace: e38158-dev
  labels:
    app.kubernetes.io/name: cats-frontend
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: cats-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cats-frontend
    spec:
      containers:
        - name: cats-frontend
          image: 'image-registry.openshift-image-registry.svc:5000/e38158-tools/cats-frontend:dev'
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 2
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 30
          livenessProbe:
            successThreshold: 1
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi

          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/config/config.js
              subPath: config.js
      volumes:
        - name: config-volume
          configMap:
            name: cats-frontend
            items:
              - key: config.js
                path: config.js
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - cats-frontend
                  - key: app.kubernetes.io/instance
                    operator: In
                    values:
                      - cats-frontend
              topologyKey: 'kubernetes.io/hostname'
