openshift/cats/dev/frontend/cats_frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cats-frontend
  namespace: e38158-dev
  labels:
    app.kubernetes.io/name: cats-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: cats-frontend
